--- a/TD1.ipynb
+++ b/TD1.ipynb
@@ -1043,17 +1043,15 @@
     "EXERCICE - Implémenter le produit matriciel de 2 matrices sous forme de listes de listes python\n",
     "\"\"\"\n",
     "def produit(A,B):\n",
-    "    n=len(A) # nombre de lignes de A\n",
-    "    m=len(B[0]) # nombre de colonnes de B\n",
-    "    p=len(B) # nombre de lignes de B \n",
+    "    n=len(A) \n",
+    "    m=len(B[0]) \n",
+    "    p=len(B) \n",
     " \n",
-    "    C = [[0]*m for i in range(n)] # matrice de n lignes et m colonnes\n",
+    "    C = [[0]*m for i in range(n)] \n",
     " \n",
-    "    # parcourir les lignes de A\n",
+    "    \n",
     "    for i in range(n):\n",
-    "        # parcourir les colonnes de B\n",
     "        for j in range(m):\n",
-    "            # parcourir les lignes de B\n",
     "            for k in range(p):\n",
     "                C[i][j] += A[i][k] * B[k][j]\n",
     "    return C"
